--- a/main.ui
+++ b/main.ui
@@ -493,6 +493,13 @@ QProgressBar::chunk{
                      </property>
                     </widget>
                    </item>
+                   <item>
+                    <widget class="QPushButton" name="pushButton">
+                     <property name="text">
+                      <string>Plot</string>
+                     </property>
+                    </widget>
+                   </item>
                   </layout>
                  </item>
                 </layout>
@@ -738,9 +745,9 @@ QProgressBar::chunk{
              <number>0</number>
             </property>
             <item>
-             <widget class="QListWidget" name="listWidget">
+             <widget class="QListWidget" name="all_pass_list_widget">
               <property name="styleSheet">
-               <string notr="true">background-color: rgb(255, 255, 127);</string>
+               <string notr="true"/>
               </property>
              </widget>
             </item>
@@ -762,9 +769,9 @@ color: rgb(0,0,0);</string>
                </widget>
               </item>
               <item>
-               <widget class="QPushButton" name="pushButton">
+               <widget class="QPushButton" name="show_all_pass_filter_btn">
                 <property name="text">
-                 <string>apply </string>
+                 <string>Show All Pass Filter</string>
                 </property>
                </widget>
               </item>
@@ -787,9 +794,9 @@ color: rgb(0,0,0);</string>
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout_6">
               <item>
-               <widget class="QPushButton" name="pushButton_2">
+               <widget class="QPushButton" name="apply_all_pass_filter_btn">
                 <property name="text">
-                 <string>Apply</string>
+                 <string>Apply All Pass Filter</string>
                 </property>
                </widget>
               </item>
