--- a/main.ui
+++ b/main.ui
@@ -212,7 +212,7 @@ padding: 3px 10px;
  color:rgb(255, 255, 255);
  border-radius: 10px;
  font-weight:bold;
-  transition: 500ms;
+  margin: 5px;
 }
 
 QPushButton::hover{
@@ -449,6 +449,9 @@ QProgressBar::chunk{
                <property name="bottomMargin">
                 <number>0</number>
                </property>
+               <property name="horizontalSpacing">
+                <number>0</number>
+               </property>
                <item row="0" column="0">
                 <layout class="QVBoxLayout" name="verticalLayout_3">
                  <item>
@@ -567,6 +570,16 @@ QProgressBar::chunk{
                      <property name="text">
                       <string>Import </string>
                      </property>
+                     <property name="icon">
+                      <iconset>
+                       <normaloff>icons/open-folder.png</normaloff>icons/open-folder.png</iconset>
+                     </property>
+                     <property name="iconSize">
+                      <size>
+                       <width>30</width>
+                       <height>30</height>
+                      </size>
+                     </property>
                     </widget>
                    </item>
                    <item>
@@ -589,6 +602,16 @@ QProgressBar::chunk{
                     <widget class="QPushButton" name="clear_btn">
                      <property name="text">
                       <string>Clear</string>
+                     </property>
+                     <property name="icon">
+                      <iconset>
+                       <normaloff>icons/bin.png</normaloff>icons/bin.png</iconset>
+                     </property>
+                     <property name="iconSize">
+                      <size>
+                       <width>30</width>
+                       <height>30</height>
+                      </size>
                      </property>
                     </widget>
                    </item>
@@ -613,7 +636,7 @@ QProgressBar::chunk{
            <property name="frameShadow">
             <enum>QFrame::Raised</enum>
            </property>
-           <layout class="QVBoxLayout" name="verticalLayout_4" stretch="15,15">
+           <layout class="QVBoxLayout" name="verticalLayout_6">
             <property name="spacing">
              <number>0</number>
             </property>
@@ -624,7 +647,7 @@ QProgressBar::chunk{
              <number>0</number>
             </property>
             <property name="rightMargin">
-             <number>11</number>
+             <number>0</number>
             </property>
             <property name="bottomMargin">
              <number>0</number>
@@ -678,15 +701,15 @@ QProgressBar::chunk{
               <property name="frameShadow">
                <enum>QFrame::Raised</enum>
               </property>
-              <layout class="QVBoxLayout" name="verticalLayout_6">
+              <layout class="QVBoxLayout" name="verticalLayout_4">
                <property name="spacing">
-                <number>7</number>
+                <number>0</number>
                </property>
                <property name="leftMargin">
                 <number>0</number>
                </property>
                <property name="topMargin">
-                <number>10</number>
+                <number>0</number>
                </property>
                <property name="rightMargin">
                 <number>0</number>
@@ -720,6 +743,59 @@ QProgressBar::chunk{
                  </property>
                 </widget>
                </item>
+               <item>
+                <layout class="QHBoxLayout" name="horizontalLayout_5">
+                 <item>
+                  <widget class="QLabel" name="label">
+                   <property name="text">
+                    <string>Filter Rate</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <spacer name="horizontalSpacer_4">
+                   <property name="orientation">
+                    <enum>Qt::Horizontal</enum>
+                   </property>
+                   <property name="sizeType">
+                    <enum>QSizePolicy::Minimum</enum>
+                   </property>
+                   <property name="sizeHint" stdset="0">
+                    <size>
+                     <width>10</width>
+                     <height>20</height>
+                    </size>
+                   </property>
+                  </spacer>
+                 </item>
+                 <item>
+                  <widget class="QSlider" name="filter_rate_slider">
+                   <property name="minimum">
+                    <number>1</number>
+                   </property>
+                   <property name="maximum">
+                    <number>100</number>
+                   </property>
+                   <property name="value">
+                    <number>100</number>
+                   </property>
+                   <property name="orientation">
+                    <enum>Qt::Horizontal</enum>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QLCDNumber" name="lcdNumber">
+                   <property name="digitCount">
+                    <number>3</number>
+                   </property>
+                   <property name="value" stdset="0">
+                    <double>100.000000000000000</double>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </item>
               </layout>
              </widget>
             </item>
@@ -728,6 +804,12 @@ QProgressBar::chunk{
          </item>
          <item>
           <widget class="QFrame" name="right_frame">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="maximumSize">
             <size>
              <width>0</width>
@@ -744,36 +826,37 @@ QProgressBar::chunk{
             <enum>QFrame::Raised</enum>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_7">
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
             <item>
-             <widget class="QListWidget" name="all_pass_list_widget">
-              <property name="styleSheet">
-               <string notr="true"/>
-              </property>
-             </widget>
+             <layout class="QHBoxLayout" name="horizontalLayout_7">
+              <item>
+               <widget class="QListWidget" name="all_pass_list_widget">
+                <property name="cursor" stdset="0">
+                 <cursorShape>PointingHandCursor</cursorShape>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true">border: 2px solid #176B87; 
+border-radius: 10px;</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout_4">
               <item>
                <widget class="QLabel" name="label_2">
                 <property name="text">
-                 <string>a</string>
+                 <string>a = </string>
                 </property>
                </widget>
               </item>
               <item>
-               <widget class="QLineEdit" name="lineEdit">
+               <widget class="QLineEdit" name="all_pass_lineEdit">
                 <property name="styleSheet">
                  <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(0,0,0);</string>
+color: rgb(0,0,0);
+border: 2px solid #176B87; 
+border-radius: 10px;</string>
                 </property>
                </widget>
               </item>
@@ -823,9 +906,15 @@ color: rgb(0,0,0);</string>
                </spacer>
               </item>
               <item>
-               <widget class="QPushButton" name="pushButton_3">
+               <widget class="QPushButton" name="clear_all_pass_filter_btn">
                 <property name="text">
                  <string>Clear</string>
+                </property>
+                <property name="iconSize">
+                 <size>
+                  <width>30</width>
+                  <height>30</height>
+                 </size>
                 </property>
                </widget>
               </item>
@@ -843,5 +932,22 @@ color: rgb(0,0,0);</string>
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>filter_rate_slider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>lcdNumber</receiver>
+   <slot>display(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>870</x>
+     <y>772</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1220</x>
+     <y>779</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
