workspaces are added

--- a/main.ui
+++ b/main.ui
@@ -598,20 +598,24 @@ QProgressBar::chunk{
                     </widget>
                    </item>
                    <item>
-                    <spacer name="horizontalSpacer">
-                     <property name="orientation">
-                      <enum>Qt::Horizontal</enum>
+                    <widget class="QPushButton" name="workspace_btn">
+                     <property name="cursor">
+                      <cursorShape>PointingHandCursor</cursorShape>
                      </property>
-                     <property name="sizeType">
-                      <enum>QSizePolicy::Minimum</enum>
+                     <property name="text">
+                      <string>workspace</string>
                      </property>
-                     <property name="sizeHint" stdset="0">
+                     <property name="icon">
+                      <iconset>
+                       <normaloff>icons/home.png</normaloff>icons/home.png</iconset>
+                     </property>
+                     <property name="iconSize">
                       <size>
-                       <width>27</width>
-                       <height>20</height>
+                       <width>30</width>
+                       <height>30</height>
                       </size>
                      </property>
-                    </spacer>
+                    </widget>
                    </item>
                    <item>
                     <widget class="QPushButton" name="clear_btn">
